@@ -2,8 +2,7 @@ include $(top_srcdir)/common/python.mk
 
 component_PYTHON = \
 	__init__.py \
-	mpegts.py \
-	keyframescounter.py
+	mpegts.py
 
 componentdir = $(libdir)/flumotion/python/flumotion/component/muxers/mpegts
 component_DATA = mpegts.xml
